--- a/howworks.html
+++ b/howworks.html
@@ -30,23 +30,18 @@
         <section id="dnl">
             <div class="dnl-container">
                 <h2>¿Cómo funciona?</h2>
-                <ul>
-                    <li>✔️ El primer paso para poder disfrutar de los multiples beneficios que ofrece nuestro maravilloso sitio es: </li>
-                    <a href="formulario.html">Iniciar Sesión</a> sino posees una cuenta, <a href="cuenta_nueva.html">Registrate.</a>
+                <p>✔️ El primer paso para poder disfrutar de los múltiples beneficios que ofrece nuestro maravilloso sitio es: <a href="formulario.html">Iniciar Sesión</a>, 
+                    sino posees una cuenta, <a href="cuenta_nueva.html">Regístrate.</a></p>
 
-                    <li>✔️ Lo siguiente es escoger entre los maravillosos descuentos que poseemos, puedes ver los cupones por categoría
-                        o ver los cupones más destacados; por lo general las mejores promociones solo están disponibles durante un par de días,
-                        luego de la compra dispones de 1 a 6 meses para usar tu cupón.</li>   
-
-                    <li>✔️ El siguiente paso es comprar tu cupón; no te preocupes, es segura y fácil, ya que contamos con un portal de pagos externo
-                        que soporta cualquier tarjeta VISA o MasterCard. Simplemente presiona el botón "Comprar" y serás redirigido(a) para pagar 
-                        con tarjeta de débido o crédito. Si deseas pagar mediante transferencia bancaria comunícate a nuestro WhatsApp (7878 8078),
-                        nuestros operadores te ayudarán.</li>   
-
-                    <li>✔️ Después de haberse confirmado el pago por cualquier medio se enviará a tu correo eléctronico y a tu número de contacto
-                        el cupón, no es necesario que lo tengas de manera física, con presentar el cupón de manera digital en el establecimiento es 
-                        suficiente, así no contaminamos más.</li>   
-                </ul>
+                <p>✔️ Lo siguiente es escoger entre los maravillosos descuentos que poseemos. Puedes ver los cupones por categoría o ver los cupones más destacados; por lo general, 
+                    las mejores promociones solo están disponibles durante un par de días. Luego de la compra, dispones de 1 a 6 meses para usar tu cupón.</p>
+                
+                <p>✔️ El siguiente paso es comprar tu cupón; no te preocupes, es seguro y fácil, ya que contamos con un portal de pagos externo que soporta cualquier tarjeta VISA 
+                    o MasterCard. Simplemente presiona el botón "Comprar" y serás redirigido(a) para pagar con tarjeta de débito o crédito. Si deseas pagar mediante transferencia 
+                    bancaria, comunícate a nuestro WhatsApp (7878 8078), nuestros operadores te ayudarán.</p>
+                
+                <p>✔️ Después de haberse confirmado el pago por cualquier medio, se enviará a tu correo electrónico y a tu número de contacto el cupón. No es necesario que 
+                    lo tengas de manera física; con presentar el cupón de manera digital en el establecimiento es suficiente, así no contaminamos más.</p>
             </div>
         </section>
     </article>
