--- a/index copy.html
+++ b/index copy.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/inicio_style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="css/inicio_images.css">
     <link rel="icon" href="img/logo.png" type="image/x-icon">
     <title>Cupon Mania</title>
 </head>
@@ -43,9 +44,9 @@
                     <h2>Comida</h2>
                 </section>
             </article>
-            <article class="cont">
-                <div class="galeria">
-                    <div class="opciones">
+            <section id="contenido">
+                <div id="galeria">
+                    <div class="plan opciones">
                         <img src="img/comida/monster-burritos.jpeg" alt="monster-burritos" width="260" height="150">
                         <p>
                             <div class="info-cupon">
@@ -57,11 +58,11 @@
                             <h5>Finaliza en: <span id="bold">10 días</span></h5>
                         </p>
                     </div>
-                    <div class="opciones">
+                    <div class="plan opciones">
                         <img src="img/comida/la-bodeguita-del-cerdito.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
                         <p>
                             <div class="info-cupon">
-                                <img src="img/logos-empresas/la bodeguita del cerdito.jpeg" alt="">
+                                <img src="img/logos-empresas/la-bodeguita-del-cerdito.jpeg" alt="">
                                 <p>Paga $15.00 en lugar de $20. Consumo de alimentos en todo el menú.</p>
                             </div>
                             <h3>$15</h3>
@@ -69,7 +70,7 @@
                             <h5>Finaliza en: <span id="bold">10 días</span></h5>
                         </p>
                     </div>
-                    <div class="opciones">
+                    <div class="plan opciones">
                         <img src="img/comida/restaurante-finesterre.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
                         <p>
                             <div class="info-cupon">
@@ -82,7 +83,7 @@
                         </p>
                     </div>
                 </div>
-            </article>
+            </section>            
         </nav>
         <nav class="sect">
             <article class="barra" >
