--- a/index copy.html
+++ b/index copy.html
@@ -118,8 +118,7 @@
                         </p>
                     </div>
                 </div>
-            </article>
-            
+            </article>           
         </nav>
         <nav class="sect">
             <article class="barra">
@@ -127,9 +126,10 @@
                     <h2>Belleza</h2>
                 </section>
             </article>
+            
             <article class="cont">
                 <div class="galeria">
-                    <div class="opciones">
+                    <div class="plan opciones">
                         <img src="img/belleza/barbotas.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
                         <p>
                             <div class="info-cupon">
@@ -141,7 +141,7 @@
                             <h5>Finaliza en: <span id="bold">10 días</span></h5>
                         </p>
                     </div>
-                    <div class="opciones">
+                    <div class="plan opciones">
                         <img src="img/belleza/mister-bro.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
                         <p>
                             <div class="info-cupon">
@@ -153,7 +153,7 @@
                             <h5>Finaliza en: <span id="bold">10 días</span></h5>
                         </p>
                     </div>
-                    <div class="opciones">
+                    <div class="plan opciones">
                         <img src="img/belleza/cejas-y-pestanas.png" alt="Hijos del Chilaquil" width="260" height="150">
                         <p>
                             <div class="info-cupon">
@@ -166,7 +166,7 @@
                         </p>
                     </div>
                 </div>
-            </article>
+            </article>            
         </nav>
         <nav class="sect">
             <article class="barra">
