--- a/index copy.html
+++ b/index copy.html
@@ -174,22 +174,23 @@
                     <h2>Salud</h2>
                 </section>
             </article>
+            
             <article class="cont">
                 <div class="galeria">
-                    <div class="opciones">
-                        <img src="img/salud/clinica-cindy-padilla-relleno.png" alt="Hijos del Chilaquil" width="260" height="150">
+                    <div class="plan opciones">
+                        <img src="img/salud/clinica-cindy-padilla-relleno.png" alt="Clínica Cindy Padilla" width="260" height="150">
                         <p>
                             <div class="info-cupon">
                                 <img src="img/logos-empresas/clinica-dental.jpg" alt="">
-                                <p>1 relleno + limpieza dental con ultrasonido + pulido dental + aplicación tópica de flúor + diagnostico + plan de tratamiento + presupuesto</p>
+                                <p>1 relleno + limpieza dental con ultrasonido + pulido dental + aplicación tópica de flúor + diagnóstico + plan de tratamiento + presupuesto</p>
                             </div>
                             <h3>$20</h3>
                             <h4>71% off | Antes $70</h4>
                             <h5>Finaliza en: <span id="bold">5 días</span></h5>
                         </p>
                     </div>
-                    <div class="opciones">
-                        <img src="img/salud/ultra-group.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
+                    <div class="plan opciones">
+                        <img src="img/salud/ultra-group.jpeg" alt="Ultra Group" width="260" height="150">
                         <p>
                             <div class="info-cupon">
                                 <img src="img/logos-empresas/ultra-group.png" alt="">
@@ -200,8 +201,8 @@
                             <h5>Finaliza en: <span id="bold">5 días</span></h5>
                         </p>
                     </div>
-                    <div class="opciones">
-                        <img src="img/salud/lab-vidlab.png" alt="Hijos del Chilaquil" width="260" height="150">
+                    <div class="plan opciones">
+                        <img src="img/salud/lab-vidlab.png" alt="VIDLAB" width="260" height="150">
                         <p>
                             <div class="info-cupon">
                                 <img src="img/logos-empresas/vid-lab.jpeg" alt="">
@@ -213,7 +214,7 @@
                         </p>
                     </div>
                 </div>
-            </article>
+            </article>            
         </nav>
         <nav class="sect">
             <article class="barra">
