--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <section id="contenido">
                 <div id="galeria">
                     <div class="plan opciones">
-                        <img src="img/comida/monster-burritos.jpeg" alt="monster-burritos" width="260" height="150">
+                       <a href="comida.html"><img src="img/comida/monster-burritos.jpeg" alt="monster-burritos" width="260" height="150"></a>
                         <p>
                             <div class="info-cupon">
                                 <img src="img/logos-empresas/burritos-university.jpeg" alt="">
@@ -59,7 +59,7 @@
                         </p>
                     </div>
                     <div class="plan opciones">
-                        <img src="img/comida/la-bodeguita-del-cerdito.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
+                        <a href="comida.html"><img src="img/comida/la-bodeguita-del-cerdito.jpeg" alt="Hijos del Chilaquil" width="260" height="150"></a>
                         <p>
                             <div class="info-cupon">
                                 <img src="img/logos-empresas/la bodeguita del cerdito.jpeg" alt="">
@@ -71,7 +71,7 @@
                         </p>
                     </div>
                     <div class="plan opciones">
-                        <img src="img/comida/restaurante-finesterre.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
+                        <a href="comida.html"><img src="img/comida/restaurante-finesterre.jpeg" alt="Hijos del Chilaquil" width="260" height="150"></a>
                         <p>
                             <div class="info-cupon">
                                 <img src="img/logos-empresas/finesterre.jpeg" alt="">
@@ -94,7 +94,7 @@
             <article id="contenido">
                 <div id="galeria">
                     <div class="plan opciones">
-                        <img src="img/viajes/parque.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
+                        <a href="viajes.html"><img src="img/viajes/parque.jpeg" alt="Hijos del Chilaquil" width="260" height="150"></a>
                         <p>
                             <div class="info-cupon">
                                 <img src="img/logos-empresas/paint-park.jpeg" alt="">
@@ -106,7 +106,7 @@
                         </p>
                     </div>
                     <div class="plan opciones">
-                        <img src="img/viajes/la-posada-del-cielo.jpeg" alt="La Posada del Cielo" width="260" height="150">
+                        <a href="viajes.html"><img src="img/viajes/la-posada-del-cielo.jpeg" alt="La Posada del Cielo" width="260" height="150"></a>
                         <p>
                             <div class="info-cupon">
                                 <img src="img/logos-empresas/posada-del-cielo.jpeg" alt="">
@@ -126,11 +126,10 @@
                     <h2>Belleza</h2>
                 </section>
             </article>
-            
             <article id="contenido">
                 <div id="galeria">
                     <div class="plan opciones">
-                        <img src="img/belleza/barbotas.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
+                        <a href="belleza.html"><img src="img/belleza/barbotas.jpeg" alt="Hijos del Chilaquil" width="260" height="150"></a>
                         <p>
                             <div class="info-cupon">
                                 <img src="img/logos-empresas/barbotas.jpg" alt="">
@@ -142,7 +141,7 @@
                         </p>
                     </div>
                     <div class="plan opciones">
-                        <img src="img/belleza/mister-bro.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
+                        <a href="belleza.html"><img src="img/belleza/mister-bro.jpeg" alt="Hijos del Chilaquil" width="260" height="150"></a>
                         <p>
                             <div class="info-cupon">
                                 <img src="img/logos-empresas/mister-bro.jpeg" alt="">
@@ -154,7 +153,7 @@
                         </p>
                     </div>
                     <div class="plan opciones">
-                        <img src="img/belleza/cejas-y-pestanas.png" alt="Hijos del Chilaquil" width="260" height="150">
+                        <a href="belleza.html"><img src="img/belleza/cejas-y-pestanas.png" alt="Hijos del Chilaquil" width="260" height="150"></a>
                         <p>
                             <div class="info-cupon">
                                 <img src="img/logos-empresas/cejas-pestañas.png" alt="">
@@ -177,7 +176,7 @@
             <section id="contenido">
                 <div id="galeria">
                     <div class="plan opciones">
-                        <img src="img/salud/clinica-cindy-padilla-relleno.png" alt="Clínica Cindy Padilla" width="260" height="150">
+                        <a href="salud.html"><img src="img/salud/clinica-cindy-padilla-relleno.png" alt="Clínica Cindy Padilla" width="260" height="150"></a>
                         <div class="info-cupon">
                             <img src="img/logos-empresas/clinica-dental.jpg" alt="">
                             <p>1 relleno + limpieza dental con ultrasonido + pulido dental + diagnóstico + plan de tratamiento + presupuesto</p>
@@ -187,7 +186,7 @@
                         <h5>Finaliza en: <span id="bold">5 días</span></h5>
                     </div>
                     <div class="plan opciones">
-                        <img src="img/salud/ultra-group.jpeg" alt="Ultra Group" width="260" height="150">
+                        <a href="salud.html"><img src="img/salud/ultra-group.jpeg" alt="Ultra Group" width="260" height="150"></a>
                         <div class="info-cupon">
                             <img src="img/logos-empresas/ultra-group.png" alt="">
                             <p>Ultrasonografía a escoger + consulta médica de clínica <span id="bold">Ultra-A-Group</span></p>
@@ -197,7 +196,7 @@
                         <h5>Finaliza en: <span id="bold">5 días</span></h5>
                     </div>
                     <div class="plan opciones">
-                        <img src="img/salud/lab-vidlab.png" alt="VIDLAB" width="260" height="150">
+                        <a href="salud.html"><img src="img/salud/lab-vidlab.png" alt="VIDLAB" width="260" height="150"></a>
                         <div class="info-cupon">
                             <img src="img/logos-empresas/vid-lab.jpeg" alt="">
                             <p>Prueba de ADN en VIDLAB El Salvador</p>
@@ -218,7 +217,7 @@
             <article id="contenido">
                 <div id="galeria">
                     <div class="plan opciones">
-                        <img src="img/things/bioinnova.jpeg" alt="monster-burritos" width="260" height="150">
+                        <a href="things.html"><img src="img/things/bioinnova.jpeg" alt="monster-burritos" width="260" height="150"></a>
                         <div class="info-cupon">
                             <img src="img/logos-empresas/bioinnova.png" alt="">
                             <p>Mesa de 1.8 metros plegable. Fabricada con polietileno de alta calidad</p>
@@ -228,7 +227,7 @@
                         <h5>Finaliza en: <span id="bold">5 días</span></h5>
                     </div>
                     <div class="plan opciones">
-                        <img src="img/salud/lab-vidlab.png" alt="Hijos del Chilaquil" width="260" height="150">
+                        <a href="things.html"><img src="img/salud/lab-vidlab.png" alt="Hijos del Chilaquil" width="260" height="150"></a>
                         <div class="info-cupon">
                             <img src="img/logos-empresas/vid-lab.jpeg" alt="">
                             <p>Prueba de ADN en VIDLAB El Salvador</p>
@@ -238,7 +237,7 @@
                         <h5>Finaliza en: <span id="bold">5 días</span></h5>
                     </div>
                     <div class="plan opciones">
-                        <img src="img/things/bioinnova-silla.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
+                        <a href="things.html"><img src="img/things/bioinnova-silla.jpeg" alt="Hijos del Chilaquil" width="260" height="150"></a>
                         <div class="info-cupon">
                             <img src="img/logos-empresas/bioinnova.png" alt="">
                             <p>Lujos Ergonómicos: Silla Ejecutiva con Función de Masaje Integrada</p>
