--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         </p>
                     </div>
                     <div class="plan opciones">
-                        <a href="comida.html"><img src="img/comida/la-bodeguita-del-cerdito.jpeg" alt="Hijos del Chilaquil" width="260" height="150"></a>
+                        <a href="comida.html"><img src="img/comida/bodega.jpg" alt="Hijos del Chilaquil" width="260" height="150"></a>
                         <p>
                             <div class="info-cupon">
                                 <img src="img/logos-empresas/la bodeguita del cerdito.jpeg" alt="">
