--- a/pages-products/belleza/adara.html
+++ b/pages-products/belleza/adara.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../index.css">
+    <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="icon" href="../../img/cupon-estrella.png" type="image/x-icon">
     <title>CupónMania</title>
@@ -25,7 +26,43 @@
             </ul>
         </nav>
     </header>
+    <section id="body-container">
+        <section class="superior">
+            <article class="opciones">
+                <img src="../../img/belleza/adara-masaje.jpeg" alt="monster-burritos">
+                <div class="info-cupon">
+                    <img src="../../img/logos-empresas/adara estética facial.jpeg" alt="" id="miniatura">
+                    <p>¡Escapate del Estrés: Masaje Relajante con Masaje Ecológico y Digitopresión, más exfoliación</p>
+                </div>
+                <div class="price">
+                    <h3>$20</h3>
+                    <h4>60% off | Antes $50</h4>
+                    <h5>Finaliza en: <span id="bold">10 días</span></h5>
+                </div>
+            </article>
+            <article>
+                <h2>Condiciones</h2>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </article>
+        </section>
+        <section class="enmedio">
+            <h2>Descripción</h2>
+            <p></p>
+        </section>
+        <section class="inferior">
+            <h2>Información adicional</h2>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </section>
 
+    </section>
 </body>
 <footer>
     <h3>©2024 CupónMania S.A. de C.V. Todos los derechos reservados</h3>
