--- a/pages-products/belleza/barbotas.html
+++ b/pages-products/belleza/barbotas.html
@@ -37,6 +37,7 @@
                     <h3>$30</h3>
                     <h4>25% off | Antes $40</h4>
                     <h5>Finaliza en: <span id="bold">10 días</span></h5>
+                    <button class="comprar">Comprar</button>
                 </div>
             </article>
             <article>
