--- a/pages-user/viajes.html
+++ b/pages-user/viajes.html
@@ -30,6 +30,7 @@
         <div class="barra">
             <h2>Viajes</h2>
         </div>
+        <a href="../pages-products/viajes/paintPark.html">
         <div class="opciones">
             <img src="../img/viajes/parque.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
             <p>
@@ -42,6 +43,8 @@
                 <h5>Finaliza en: <span id="bold">5 días</span></h5>
             </p>
         </div>
+        </a>
+        <a href="../pages-products/viajes/posadaCielo.html">
         <div class="opciones">
             <img src="../img/viajes/la-posada-del-cielo.jpeg" alt="monster-burritos" width="260" height="150">
             <p>
@@ -54,6 +57,7 @@
                 <h5>Finaliza en: <span id="bold">5 días</span></h5>
             </p>
         </div>
+        </a>
     </section>
 
 
