--- a/pages-user/salud.html
+++ b/pages-user/salud.html
@@ -30,7 +30,7 @@
         <div class="barra">
             <h2>Salud</h2>
         </div>
-
+        <a href="../pages-products/Salud/Clinica_dental.html">
         <div class="opciones">
             <img src="../img/salud/clinica-cindy-padilla-relleno.png" alt="Hijos del Chilaquil" width="260" height="150">
             <p>
@@ -43,6 +43,8 @@
                 <h5>Finaliza en: <span id="bold">5 días</span></h5>
             </p>
         </div>
+        </a>
+        <a href="../pages-products/Salud/Opti-Smart.html">
         <div class="opciones">
             <img src="../img/salud/opti-smart.jpeg" alt="monster-burritos" width="260" height="150">
             <p>
@@ -55,6 +57,8 @@
                 <h5>Finaliza en: <span id="bold">5 días</span></h5>
             </p>
         </div>
+        </a>
+        <a href="../pages-products/Salud/UltraGroup.html">
         <div class="opciones">
             <img src="../img/salud/ultra-group.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
             <p>
@@ -67,6 +71,8 @@
                 <h5>Finaliza en: <span id="bold">5 días</span></h5>
             </p>
         </div>
+        </a>
+        <a href="../pages-products/Salud/LabClinico.html">
         <div class="opciones">
             <img src="../img/salud/lab-vidlab.png" alt="Hijos del Chilaquil" width="260" height="150">
             <p>
@@ -79,6 +85,8 @@
                 <h5>Finaliza en: <span id="bold">5 días</span></h5>
             </p>
         </div>
+        </a>
+        <a href="../pages-products/Salud/ClinicaInficon.html">
         <div class="opciones">
             <img src="../img/salud/clinica-inficon.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
             <p>
@@ -91,7 +99,7 @@
                 <h5>Finaliza en: <span id="bold">5 días</span></h5>
             </p>
         </div>
-
+    </a>
     </section>
 </body>
 <footer>
